# oxyz

./: .gitattributes  .gitignore  .rumdl.toml  AGENTS.md  CHANGELOG.md  Cargo.toml  LICENSE-MIT  README.md  RELEASING.md  prek.toml  pyproject.toml  stubtest-allowlist.txt
.github/workflows/: test.yml  wheels.yml
benchmarks/: MEMORY.md  RESULTS.md  _style.py  conftest.py  memory.py  plot.py  report.py  run.py  test_fixtures_scaling.py  test_plot_curves.py  test_read.py  test_report_buckets.py  test_report_scaling.py  test_scaling.py  test_stores.py  test_style.py  test_systems.py  test_write.py
benchmarks/stores/: __init__.py  ase_lmdb.py  ase_sqlite.py  atompack.py  common.py  lmdb_pickle.py
crates/atomflow-core/: Cargo.toml
crates/atomflow-core/benches/: parse.rs
crates/atomflow-core/src/: extxyz.rs  index.rs  lib.rs  model.rs  schema.rs
crates/atomflow-core/tests/: corpus_smoke.rs  read_frames.rs  read_simple.rs
crates/atomflow-py/: Cargo.toml
crates/atomflow-py/src/: lib.rs
crates/oxyz-core/: Cargo.toml
crates/oxyz-core/benches/: parse.rs
crates/oxyz-core/src/: batch.rs  decode.rs  encode.rs  extxyz.rs  index.rs  lib.rs  model.rs  project.rs  schema.rs
crates/oxyz-core/tests/: batch_build.rs  compressed.rs  corpus_invalid.rs  corpus_smoke.rs  decode_sources.rs  error_context.rs  grammar_conformance.rs  index_scan.rs  indexed_frames.rs  parallel_read.rs  parser_properties.rs  projection.rs  read_frames.rs  schema_inference.rs  single_pass.rs  write.rs
crates/oxyz-py/: Cargo.toml
crates/oxyz-py/src/: lib.rs
examples/: ase_dropin.py  batch_training_loop.py  pytorch_targets.py  read_numpy.py  scan_and_schema.py  schema_and_project.py  write_roundtrip.py
examples/data/: mixed.extxyz  water.extxyz
scripts/: changelog-section.sh  coverage.sh  slice_mad_sample.py  zizmor.sh
src/atomflow/: __init__.py  _batch.py  _frames.py  _rust.pyi  _scan.py  _schema.py  ase.py
src/oxyz/: __init__.py  __main__.py  _batch.py  _cli.py  _convert.py  _frames.py  _project.py  _remote.py  _rust.pyi  _scan.py  _schema.py  _schema_emit.py  _schema_match.py  _schema_spec.py  _select.py  _stats.py  _torch.py  _write.py  ase.py  conftest.py  metatomic.py  torch_sim.py
tests/: conftest.py  test_ase.py  test_batch.py  test_cli.py  test_compressed.py  test_convert.py  test_errors.py  test_examples.py  test_extxyz.py  test_import.py  test_metatomic.py  test_native_read.py  test_project.py  test_public_docstrings.py  test_reader_entries.py  test_remote.py  test_remote_unit.py  test_schema.py  test_schema_emit.py  test_schema_match.py  test_schema_read.py  test_schema_spec.py  test_torch_sim.py  test_ty_canary.py  test_write.py
tests/data/: README.md  atomic_numbers_z.extxyz  force_singular_alias.extxyz  id_and_selection.extxyz  mace_isolated_atom_and_head.xyz  mace_ref_energy_forces_stress.xyz  mad_r2scan_sample.extxyz  mass_and_charge.extxyz  mixed_schema_optional_column.xyz  molecule_type_labels.extxyz  move_mask_fix_atoms.extxyz  move_mask_fix_cartesian.extxyz  newstyle_array_metadata.extxyz  no_lattice_molecule.xyz  nonorthogonal.extxyz  per_atom_boolean.extxyz  periodic_pbc_ttf.extxyz  quoted_strings_booleans_scalars.extxyz  schema_conformant.extxyz  schema_drift_type.extxyz  schema_extra_column.extxyz  simple.extxyz  singlequote_metadata.extxyz  stress_matrix9.extxyz  stress_voigt6.extxyz  two_frame_same_schema.xyz  varying_atom_counts.xyz  varying_density.extxyz  virial_matrix9.extxyz
tests/data/compressed/: README.md  concat.xyz.zst  two_frame.tar  two_frame.xyz.zst
tests/data/invalid/: bad_atom_count.extxyz  bad_atom_value.extxyz  bare_string_excluded_char.extxyz  dangling_metadata_value.extxyz  ragged_bracket_array.extxyz  short_atom_row.extxyz  trailing_comma_array.extxyz  truncated_frame.extxyz  unknown_property_kind.extxyz  unterminated_quote.extxyz
