[build-system]
requires = ["maturin>=1.8,<2"]
build-backend = "maturin"

[project]
name = "oxyz"
version = "0.1.0"
description = "Fast, schema-aware extxyz reading for atomistic machine-learning workflows"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT OR Apache-2.0"
license-files = ["LICENSE-MIT", "LICENSE-APACHE"]
authors = [{ name = "Theo Keane" }]
keywords = [
    "extxyz",
    "xyz",
    "atomistic",
    "machine-learning",
    "materials",
    "chemistry",
    "ase",
    "parser",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Rust",
    "Topic :: Scientific/Engineering :: Chemistry",
    "Topic :: Scientific/Engineering :: Physics",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Typing :: Typed",
]
dependencies = [
    "numpy>=2",
]

[project.urls]
Repository = "https://github.com/theochemtheo/oxyz"
Issues = "https://github.com/theochemtheo/oxyz/issues"

[project.scripts]
oxyz = "oxyz._cli:main"

[project.optional-dependencies]
# >=3.23: the first ase with set_calc_and_arrays and numpy 2 support; the
# oxyz.ase golden tests pass from 3.23 up. <4: ASEv4 may change the data
# model; new majors are opted into deliberately.
ase = ["ase>=3.23,<4"]

[dependency-groups]
# Benchmark dependencies live in benchmarks/run.py (PEP 723), not here:
# the comparison parsers need CPython <3.14, which that script pins.
dev = [
    "ase>=3.28.0",
    "matplotlib>=3.10.9",
    "maturin>=1.13.3",
    "prek>=0.4.4",
    "pytest>=9.0.3",
    "ruff>=0.15.16",
    "rumdl>=0.2.15",
    "seaborn>=0.13.2",
    "ty>=0.0.44",
]

[tool.uv]
# Rebuild the editable extension (release, via maturin PEP517) whenever the
# Rust sources change, so `uv run` never tests or benchmarks a stale build.
cache-keys = [
    { file = "pyproject.toml" },
    { file = "Cargo.toml" },
    { file = "Cargo.lock" },
    { file = "crates/**/Cargo.toml" },
    { file = "crates/**/*.rs" },
]

[tool.ruff]
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",
    "F",
    "I",
    "UP",
    "B",
    "SIM",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.maturin]
manifest-path = "crates/oxyz-py/Cargo.toml"
module-name = "oxyz._rust"
python-source = "src"
features = ["extension-module"]
