[package]
name = "oxyz-core"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[features]
default = ["parallel"]
parallel = ["dep:rayon"]

[dependencies]
fast-float2 = "0.2.3"
rayon = { version = "1", optional = true }
thiserror = "2"

[dev-dependencies]
criterion = "0.7.0"
proptest = "1.11.0"

[[bench]]
name = "parse"
harness = false
