[package]
name = "oxyz-core"
version = "0.3.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[features]
default = ["parallel"]
parallel = ["dep:rayon"]

[dependencies]
fast-float2 = "0.2.3"
flate2 = "1"
memchr = "2.8.1"
rayon = { version = "1", optional = true }
ruzstd = "0.8"
tar = { version = "0.4", default-features = false }
thiserror = "2"
# "deflate" is the pure-Rust (flate2/miniz_oxide) backend; default-features off
# drops deflate64/bzip2/zstd-via-C we do not need.
zip = { version = "2", default-features = false, features = ["deflate"] }

[dev-dependencies]
criterion = "0.7.0"
proptest = "1.11.0"

[[bench]]
name = "parse"
harness = false
