[package]
name = "oxyz-py"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[lib]
name = "_rust"
crate-type = ["cdylib"]

[features]
default = []
extension-module = ["pyo3/extension-module"]

[dependencies]
oxyz-core = { path = "../oxyz-core" }
ndarray = "0.16"
numpy = "0.28"
pyo3 = "0.28"
