[package]
name = "oxyz-py"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[lib]
name = "_rust"
crate-type = ["cdylib"]

[features]
default = []
extension-module = ["pyo3/extension-module"]

[dependencies]
oxyz-core = { path = "../oxyz-core" }
ndarray = "0.16"
numpy = "0.28"
# abi3-py311: one wheel per platform covers CPython >=3.11 (release plan,
# phase 0). Trade-off accepted there: no free-threaded wheels for now.
pyo3 = { version = "0.28", features = ["abi3-py311"] }
